--- a/content_backend/template/core/top.htm
+++ b/content_backend/template/core/top.htm
@@ -6,8 +6,10 @@
 <link rel="stylesheet" type="text/css" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.window.css">
 <link id="css_source" rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.8/css/jquery.dataTables.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
+<script src="//cdn.datatables.net/1.10.8/js/jquery.dataTables.min.js"></script>
 <script src="js/jquery.window.js"></script>
 <script src="js/time_tracking.js"></script>
 <script src="js/hq.js"></script>
